# Project4zip

./: LLVM_environment_setup  myLL.cpp  project_description
part1_memoryoverflow/: memoryoverflow.c  memoryoverflow.ll  output
part2_useafterfree/: output  useafterfree.c  useafterfree.ll
part3_try_me/: output  try_me.c  try_me.ll
samplellvmpass/: CMakeLists.txt  samplepass.cpp  samplepassoutput
